--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@icon/themify-icons": "^1.0.1-alpha.3",
+    "d3-geo": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-simple-maps": "^3.0.0",
+    "react-tooltip": "^5.27.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
