--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@icon/themify-icons": "^1.0.1-alpha.3",
+    "@mui/material": "^5.15.20",
     "d3-geo": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
