--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
-    "react-simple-maps": "^3.0.0",
-    "react-tooltip": "^5.27.0"
+    "react-simple-maps": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
