--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@icon/themify-icons": "^1.0.1-alpha.3",
     "@mui/material": "^5.15.20",
     "d3-geo": "^3.1.1",
+    "flowbite-react": "^0.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
